--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    overflow-y: scroll; /* Bật cuộn dọc nhưng ẩn thanh cuộn */
+    scrollbar-width: none; /* Đối với Firefox */
+}
+
+body::-webkit-scrollbar {
+    display: none; /* Đối với Chrome, Safari và Edge */
+}
+
 
 .we-help-section {
     padding: 7rem 0 0 0;
